--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
